@@ -1,3 +1,12 @@
+2000-10-05  Jason L Tibbitts III  <tibbs@math.uh.edu>
+
+	* lib/Mj/Token.pm: Clean up various undeclared variable warnings.
+
+2000-10-04  Jason L Tibbitts III  <tibbs@math.uh.edu>
+
+	* lib/Mj/Access.pm (_d_post): Fix error when checking
+        restrict_post.
+
 2000-10-04  Michael Yount <csf@moscow.com>
 
 	* lib/Majordomo.pm (trigger):  Use the list-specific triggers
